Added a health-bar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 
         <!-- HUD (Heads-Up Display) -->
         <div id="hud">
+            <div id="health-bar-container">
+                <div id="health-bar"></div>
+            </div>
             <span id="score">Score: 0</span>
             <span id="lives">Lives: 3</span>
         </div>
+        
 
         <!-- Main Menu -->
         <div id="main-menu">
@@ -40,6 +44,7 @@
         <div id="game-over">GAME OVER</div>
     </div>
     <script src="node_modules/phaser/dist/phaser.js"></script>
+    <script src="indexDG.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
