--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         <div id="game-over">GAME OVER</div>
     </div>
-    <script src="node_modules/phaser/dist/phaser.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
     <script src="indexDG.js"></script>
     <script src="main.js"></script>
 </body>
