Added logo and main Title (Battle City)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
+          <!-- Battle City Title -->
+    <div id="battle-city-title">Battle City</div> 
+
     <div id="game-container">
+        <img id="logo" src="/assets/images/logo.png" alt="Game Logo">
+    <div id="hud">
+        <div id="health-bar-container">
+            <div id="health-bar"></div>
+        </div>
+        <span id="score">Score: 0</span>
+        <span id="lives">Lives: 3</span>
+    </div>
 
         <!-- Game Canvas -->
          <div id="phaser-game"></div>
@@ -21,7 +33,6 @@
             <span id="lives">Lives: 3</span>
         </div>
         
-
         <!-- Main Menu -->
         <div id="main-menu">
             <h1>Battle City</h1>
