Fixed the instructions modal

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
             <button id="high-scores-button">High Scores</button>
         </div>
 
-         <!-- Instructions modal -->
-         <div id="instructions-modal" class="modal">
+         <!-- Instructions Modal -->
+       <div id="instructions-modal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h2>How to Play</h2>
+                <h2>Instructions</h2>
                 <p>Use arrow keys to move your tank.</p>
                 <p>Press space to shoot.</p>
                 <p>Destroy enemy tanks to score points!</p>
             </div>
         </div>
+
 
         <!-- Highscores modal -->
         <div id="highScoresModal" class="modal">
