Add exit game function, to handle exit and resume game

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <div id="game-over">GAME OVER</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="highScores.js"></script>
     <script src="indexDG.js"></script>
     <script src="main.js"></script>
