When the players has 0 lives, a game over mesage is dysplayed and the game restarts

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         </div>
 
     
-        <div id="game-over">GAME OVER</div>
+        <div id="game-over">
+            <h2>Game Over</h2>
+            <p id="final-score"></p> <!-- This will display the final score -->
+        </div>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
     <script src="highScores.js"></script>
