--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <p>Use arrow keys to move your tank.</p>
                 <p>Press space to shoot.</p>
                 <p>Destroy enemy tanks to score points!</p>
+                <p>Press ESC to pause or exit game.</p>
             </div>
         </div>
 
